sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
	<fullName>Description__c</fullName>
	<label>Description</label>
	<description>The template description</description>
	<type>TextArea</type>
</CustomField>