sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/ImportId__c.field-meta.xml
<CustomField>
	<fullName>ImportId__c</fullName>
	<caseSensitive>true</caseSensitive>
	<externalId>true</externalId>
	<description>Used when importing an Action Plan Template via XML. Not needed for templates created in this org.</description>
	<label>ImportId</label>
	<length>18</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>