sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/SkipDay__c.field-meta.xml
<CustomField>
	<fullName>SkipDay__c</fullName>
	<description>If a Due Date lands on a weekend it should be pushed to this day.</description>
	<inlineHelpText>If a Due Date lands on a weekend it should be pushed to this day.</inlineHelpText>
	<label>Default Weekend Due Dates To</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>SkipWeekends__c</controllingField>
		<restricted>true</restricted>
		<valueSetName>SkipDay</valueSetName>
	</valueSet>
</CustomField>