sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/SkipWeekends__c.field-meta.xml
<CustomField>
	<fullName>SkipWeekends__c</fullName>
	<defaultValue>false</defaultValue>
	<description>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</description>
	<inlineHelpText>Automatically reschedules a task that would fall on a Saturday or a Sunday to either a Monday or Friday so you can skip weekends when calculating activity start dates.</inlineHelpText>
	<label>Avoid Weekends For Due Dates</label>
	<type>Checkbox</type>
</CustomField>