sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/TaskRecordTypeID__c.field-meta.xml
<CustomField>
	<fullName>TaskRecordTypeID__c</fullName>
	<label>Tasks Record Type</label>
	<length>18</length>
	<type>Text</type>
</CustomField>