sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>The total number of Template Tasks on the Action Plan Template</description>
    <inlineHelpText>The total number of Template Tasks on the Action Plan Template</inlineHelpText>
    <label>Template Tasks</label>
    <summaryForeignKey>APTemplateTask__c.Action_Plan_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>