sfdx-source/LabsActionPlans/main/default/objects/ActionPlanTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Archived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>